test_src/compiler_errors/types/arithmetic/MultiplyBoolError4.b
class MultiplyBoolError4 {
    void test() {
        Bool value = true;
        println(value *= 2);
    }
}
